--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <img src="img/img1.png" width="1080" height="720"alt="bilde av mappestruktur">
       <!-- et bilde av mappestrukturen vår -->
       <!-- bildet har breede 1080piksler og høyde på 720piksler -->
+      <p> Dette er mappestrukturen vår</p>
     </div>
 
     <div class="skjema">
