--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
 
     <div class="mappestruktur">
       <!-- en container, med klassen mappestruktur, som inneholder et bilde-->
-      <img src="img/img1.png" width="1080" height="720"alt="bilde av mappestruktur">
+      <img src="img/img1.png" width="1702" height="1090"alt="bilde av mappestruktur">
       <!-- et bilde av mappestrukturen vår -->
-      <!-- bildet har breede 1080piksler og høyde på 720piksler -->
       <p> Dette er mappestrukturen vår</p>
     </div>
 
@@ -92,7 +91,7 @@
       <form method="get">
         <!-- Skjema som spør om noe interessant-->
 
-        <label>Navn</label><br>
+        <label>Navn</label><br>1080
         <!-- overskriften -->
         <input placeholder="Enter your Name" required><br>
         <!-- her kan brukeren skrive noe -->
