--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
 
     <div class="mappestruktur">
       <!-- en container, med klassen mappestruktur, som inneholder et bilde-->
+    
+       <p> Dette er mappestrukturen vår:</p>
       <img src="img/img1.png" width="1702" height="1090"alt="bilde av mappestruktur">
       <!-- et bilde av mappestrukturen vår -->
-      <p> Dette er mappestrukturen vår</p>
+     
     </div>
 
     <div class="skjema">
