--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <form method="get">
         <!-- Skjema som spør om noe interessant-->
 
-        <label>Navn</label><br>1080
+        <label>Navn</label><br>
         <!-- overskriften -->
         <input placeholder="Enter your Name" required><br>
         <!-- her kan brukeren skrive noe -->
